samples/_failures_safe/1761072173_38a8ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df09c919.c: In function ‘main’:
./samples/SAFE/__tmp_df09c919.c:179:9: error: expected identifier at end of input
  179 |         if (tokens[j].
      |         ^~
./samples/SAFE/__tmp_df09c919.c:179:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_df09c919.c:179:9: error: expected declaration or statement at end of input
